tdf#162948: Add support for gte attribute in conditional format

Change-Id: I3dd1a9499ec8d3685b84f3745cf4156b75d1f76f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174470
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Jenkins