sc/source/filter/excel/xecontent.cxx
@@ -1255,7 +1255,8 @@ void XclExpCfvo::SaveXml( XclExpXmlStream& rStrm )
 
     rWorksheet->startElement( XML_cfvo,
             XML_type, getColorScaleType(mrEntry, mbFirst),
-            XML_val, aValue );
+            XML_val, aValue,
+            XML_gte, sax_fastparser::UseIf("0", !mrEntry.GetGreaterThanOrEqual()));
 
     rWorksheet->endElement( XML_cfvo );
 }
